--- a/src/styles/dropdown/properties.css
+++ b/src/styles/dropdown/properties.css
@@ -2,7 +2,7 @@
 @import "../typography.css";
 
 :root {
-  --dropdown-background-color: var(--color-white);
+  --dropdown-background-color: transparent;
   --dropdown-border-bottom: 1px solid var(--color-light-grey-50);
   --dropdown-border-color-focus: var(--color-light-greenish-100);
   --dropdown-border-color: var(--color-light-silver-100);
@@ -12,13 +12,13 @@
   --dropdown-border-top: 1px solid var(--color-light-grey-50);
   --dropdown-color-disabled: var(--color-light-silver-100);
   --dropdown-font-family: var(--title-font-family);
-  --dropdown-font-size: 12px;
+  --dropdown-font-size: 14px;
   --dropdown-height: 28px;
   --dropdown-icon-background-active: var(--color-light-greenish-100);
   --dropdown-icon-border: 1px solid var(--color-light-grey-50);
   --dropdown-icon-color-active: var(--color-white);
   --dropdown-icon-size: var(--dropdown-height);
-  --dropdown-line-height: 37px;
+  --dropdown-line-height: 28px;
   --dropdown-option-color: var(--color-light-chromium-100);
   --dropdown-option-disabled-background: none;
   --dropdown-option-disabled-opacity: 0.5;
